--- a/styles.css
+++ b/styles.css
@@ -3,17 +3,68 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    height: 74px;
 }
 .headerLogo{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 24px;
     color: #f9faf8;
-    margin: 20px 30px 20px 30px;
+    margin: 20px 30px 20px 150px;
 }
 .headerLinks{
-    margin-right: 30px;
+    margin-right: 150px;
     display:flex;
 }
 a {
     margin: 0 15px 0 15px;
+    font-size: 18px;
+    color: #e5e7eb;
+}
+
+.container1{
+    background-color: #1f2937;
+    display:flex;
+    height: fit-content;
+    padding-left: 200px;
+    padding-bottom: 50px;
+}
+.leftSide1{
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.thisSite{
+    font-size: 48px;
+    font-weight:800;
+    color: #f9faf8;
+}
+.textUnder{
+    font-size: 18px;
+    color: #e5e7eb;
+    margin-top: 20px;
+    width:30%;
+}
+
+.image1{
+    justify-self: center;
+    align-self: center;
+    margin-right: 200px;
+    margin-left: 30px;
+    width:fit-content
+}
+.image1 img{
+    width: 250px;
+    height:auto;
+}
+ .button1{
+    background-color: #3882f6; /* Green */
+    border: 1px solid black;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    border-radius: 5px;
+    padding: 3px 15px 3px 15px;
+    width:fit-content;
+    margin-top: 15px;
 }
