--- a/styles.css
+++ b/styles.css
@@ -68,3 +68,40 @@ a {
     width:fit-content;
     margin-top: 15px;
 }
+
+.container2{
+    display:flex;
+    flex-direction: column;
+}
+
+.container21{
+    color:black;
+    font-size: 25px;
+    font-weight: bolder;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin: 50px 0 50px 0;
+    align-self: center;
+}
+
+.container22{
+    display:flex;
+    justify-content:space-evenly;
+    align-items: center;
+}
+
+.card{
+    display: flex;
+    flex-direction: column;
+}
+
+.card img{
+    width: 200px;
+    height:200px;
+    border: 2px solid #3882f6;
+    border-radius: 10px;
+}
+
+.card div{
+    width: 200px;
+    text-align: center;
+}
